--- a/app/src/main/res/layout/activity_found_form.xml
+++ b/app/src/main/res/layout/activity_found_form.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:background="#726B6B"
         android:fillViewport="true"
-        tools:context=".FoundDesc">
+        tools:context=".FoundForm">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
