--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,7 +44,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textView"
-                app:layout_constraintBottom_toTopOf="@id/foundButton"/> <!-- ✅ Even Spacing -->
+                app:layout_constraintBottom_toTopOf="@id/foundButton"/>
 
             <Button
                 android:id="@+id/foundButton"
