--- a/app/src/main/res/layout/activity_found_form.xml
+++ b/app/src/main/res/layout/activity_found_form.xml
@@ -205,7 +205,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#000000"
+            android:background="@color/black"
             android:text="Cancel"
             android:textColor="@color/white" />
 
@@ -215,7 +215,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_weight="1"
-            android:background="#000000"
+            android:background="@color/black"
             android:text="Next"
             android:textColor="@color/white" />
     </LinearLayout>
