--- a/app/src/main/res/layout/activity_ongoing.xml
+++ b/app/src/main/res/layout/activity_ongoing.xml
@@ -12,15 +12,14 @@
         android:layout_weight="1"
         android:background="#726B6B"
         android:fillViewport="true"
-        tools:context=".LostForm">
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".OngoingActivity">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#726b6b"
-            tools:context=".OngoingActivity">
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="-131dp">
 
             <TextView
                 android:id="@+id/ongoing"
@@ -131,8 +130,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#000000"
+            android:background="@color/black"
             android:text="Back"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"  />
     </LinearLayout>
 </LinearLayout>
