Added delete function for reports

--- a/app/src/main/res/layout/activity_found_form.xml
+++ b/app/src/main/res/layout/activity_found_form.xml
@@ -201,7 +201,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/foundDescCancelButton"
+            android:id="@+id/cancelButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -210,7 +210,7 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/foundDescNextButton"
+            android:id="@+id/nextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
