--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -162,7 +162,7 @@
         android:orientation="horizontal"
         android:background="#ffffff">
         <Button
-            android:id="@+id/foundSumBackButton"
+            android:id="@+id/backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -170,7 +170,7 @@
             android:background="#000000"
             android:textColor="@color/white" />
         <Button
-            android:id="@+id/foundSumCancelButton"
+            android:id="@+id/cancelButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -179,7 +179,7 @@
             android:textColor="@color/white"
             android:layout_marginStart="2dp"/>
         <Button
-            android:id="@+id/foundSumSubmitButton"
+            android:id="@+id/submitButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
