Added a badge count for potential matches and changed query function for deleting and finding potential matches

--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -25,6 +25,19 @@
         android:gravity="center"/>
 
     <TextView
+        android:id="@+id/matchBadge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/badge_background"
+        android:visibility="gone"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/itemName"
+        app:layout_constraintBottom_toBottomOf="@id/itemName"/>
+
+    <TextView
         android:id="@+id/itemDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
