--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#726B6B"
     tools:context=".Login">
+
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/skybackground"
+        android:contentDescription="@string/background_desc"/>
+
+
 
     <ImageView
         android:id="@+id/imageLogo"
@@ -26,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="40dp"
-        android:background="@android:color/white"
+        android:background="@color/semi_transparent2"
         android:elevation="8dp"
         android:orientation="vertical"
         android:padding="24dp"
