--- a/app/src/main/res/layout/activity_lost_summary.xml
+++ b/app/src/main/res/layout/activity_lost_summary.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#726B6B"
         android:fillViewport="true"
         tools:context=".LostSummary">
 
@@ -18,6 +17,7 @@
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/skybackground"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="-131dp">
 
@@ -25,7 +25,7 @@
                 android:id="@+id/summaryTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="20dp"
                 android:text="Summary of lost item:"
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
