--- a/app/src/main/res/layout/activity_convo_list.xml
+++ b/app/src/main/res/layout/activity_convo_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#726b6b"
-    tools:context=".ConvoListActivity">
+    tools:context="ConvoListActivity">
 
     <TextView
         android:id="@+id/ongoing"
@@ -75,8 +75,17 @@
         app:layout_constraintTop_toBottomOf="@+id/disputes"
         app:layout_constraintVertical_bias="0.027" />
 
-    <Button
-        android:id="@+id/button"
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recyclerView"
+       android:layout_width="match_parent"
+       android:layout_height="538dp"
+       app:layout_constraintBottom_toBottomOf="parent"
+       tools:layout_editor_absoluteX="0dp"  />
+
+
+
+    <!--<Button
+        android:id="@+id/btnLogin"
         android:layout_width="336dp"
         android:layout_height="58dp"
         android:layout_marginTop="56dp"
@@ -98,7 +107,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
     <Button
         android:id="@+id/button9"
@@ -126,6 +135,6 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button9"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
