--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,7 +93,7 @@
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="285dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/btn_login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
